feature: add bid, offers n request
